First start with non-empty extcap folder after install or reboot hangs at "initializing tap listeners"
This issue was migrated from bug 12845 in our old bug tracker.
Original bug information:
Reporter: Pavel Sindelka
Status: RESOLVED FIXED
Product: Wireshark
Component: Qt UI
OS: Windows 10
Platform: x86
Version: 2.2.0
Attachments:
USBPCapCMD.PML: Process Monitor log illustrating the issue
DebugOutput.txt: Output of USBPcapCMD that cause WireShark to hang on startup.