extcap: Increase spawn size

Increase the spawn size to prevent windows from stopping if the
output of the extcap utility is too long

# Conflicts:
#	extcap_spawn.c

Bug: 12845
Change-Id: I162b1322fd970777d2156d869e95b005b0f045ac
Reviewed-on: https://code.wireshark.org/review/25014
Reviewed-by: Michael Mann <mmann78@netscape.net>
Petri-Dish: Michael Mann <mmann78@netscape.net>
Tested-by: Petri Dish Buildbot
Reviewed-by: Roland Knall <rknall@gmail.com>
Reviewed-on: https://code.wireshark.org/review/25026
(cherry picked from commit beb30f96e650ef8bcae19cdcbf74408c09ae4302)
Reviewed-on: https://code.wireshark.org/review/25028